# Risiko

./: .gitignore  README.md  pyproject.toml
Risiko/: mcts_risk.py  risk_az_net.py  risk_state.py
legacy/: action_mapping.py  debug_env_shapes.py  gui.py  pick_coords.py  play_random_games.py  play_vs_random_cli.py  risk_env.py  risk_hahn_heuristic.py  self_play_risk.py
scripts/: run_gui.py  run_self_play.py  run_training_loop.py  train.py
src/risiko/: __init__.py  config.py
src/risiko/az/: __init__.py  mcts.py  network.py  self_play.py  train.py
src/risiko/game/: __init__.py  actions.py  env.py  map.py  rules.py  state.py
src/risiko/utils/: __init__.py  serialization.py
