[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risiko"
version = "0.1.0"
description = "AlphaZero-style learning bot for a simplified Risk-like game."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
]

[project.optional-dependencies]
train = [
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
